@@ -1,1 +1,2 @@
 MD5 d5af9287407d77e0c502486b05acf67c vdr-1.3.9.tar.bz2 440271
+MD5 23bb417f6f16d49b4eeae103b2276161 vdr-1.3.7-AC3overDVB-0.2.5.diff.gz 28037
