@@ -1,10 +1,13 @@
 # ChangeLog for media-video/vdr
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.50 2004/06/01 12:49:11 austriancoder Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.51 2004/06/03 19:26:11 fow0ryl Exp $
 
 *vdr-1.3.9 (1 June 2004)
   1. June 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.9
   Version bump to vanilla 1.3.9
+
+  3. June 2004: Henning Ryll <henning.ryll@web.de>
+  AC3overDVB patch added
 
 *vdr-1.3.8 (25 May 2004)
   25. May 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.8
